fix canvas css
forgot to update stylesheet for renamed canvas ID, caused canvas to overflow container and be clipped

--- a/static/style.css
+++ b/static/style.css
@@ -100,7 +100,7 @@ p,input,label,button,select {
     cursor: default;
 }
 
-#webGLCanvas {
+#canvas {
     margin: 0;
     width: 100%;
     height: 100%;
